# arith

./: CHANGELOG.md  README.md  arith.cabal  fourmolu.yaml
.github/workflows/: ci.yaml
app/: Main.hs  Scanner.hs
src/: Arith.hs
src/Arith/Syntax/: Lexer.hs  Token.hs  Utils.hs
src/Arith/VM/: OpCodes.hs  Parser.hs  Stack.hs
test/: DummyTest.hs  LexerTest.hs  LexerUtilsTest.hs
