cabal-version:      3.0
name:               arith
version:            0.0.0.0
synopsis:           A command line calculator
description:        A command line calculator inspired by bc
homepage:           https://github.com/flyingsl0ths/arith
bug-reports:        https://github.com/flyingsl0ths/arith/issues
license:            GPL-3.0-only
license-file:       LICENSE
author:             flyingsl0ths
maintainer:         randomemail33110@protonmail.com
copyright:          2022 Gabriel Celis
category:           CLI,Math
tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.4 || ==9.4.2
extra-source-files:
  CHANGELOG.md
  README.md

executable arith
  main-is:          Main.hs
  other-modules:
    Parser
    Scanner
    Stack
    Token

  other-extensions: OverloadedStrings
  build-depends:
    , base  >=4.14  && <4.18
    , text  ==2.0.1

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite dummy
  main-is:          DummyTest.hs
  build-depends:
    , base   >=4.14   && <4.18
    , hspec  ==2.10.6

  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  default-language: Haskell2010
