cabal-version:      3.0
name:               arith
version:            0.0.0.0
synopsis:           A command line calculator
description:        A command line calculator inspired by bc
homepage:           https://github.com/flyingsl0ths/arith
bug-reports:        https://github.com/flyingsl0ths/arith/issues
license:            GPL-3.0-only
license-file:       LICENSE
author:             flyingsl0ths
maintainer:         randomemail33110@protonmail.com
copyright:          2022 Gabriel Celis
category:           CLI,Math
tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.4 || ==9.4.2
extra-source-files:
  CHANGELOG.md
  README.md

common analyze
  ghc-options: -fwrite-ide-info -hiedir=.hie

library lang
  import:           analyze
  exposed-modules:  Arith
  other-modules:
    Arith.Syntax.Lexer
    Arith.Syntax.Token
    Arith.Syntax.Utils
    Arith.VM.OpCodes
    Arith.VM.Parser
    Arith.VM.Stack

  build-depends:    base >=4.14 && <4.18
  hs-source-dirs:   src
  default-language: Haskell2010
  other-extensions:
    OverloadedStrings
    RecordWildCards

executable arith
  import:           analyze
  main-is:          Main.hs
  build-depends:
    , base  >=4.14 && <4.18
    , lang

  hs-source-dirs:   app
  default-language: Haskell2010

common test-opts
  build-depends:
    , base   >=4.14   && <4.18
    , hspec  ==2.10.6

  hs-source-dirs:   test src
  default-language: Haskell2010

test-suite lexer-utils
  import:        test-opts
  main-is:       LexerUtilsTest.hs
  other-modules: Arith.Syntax.Utils
  type:          exitcode-stdio-1.0

